[package]
name = "solana-gun-quic-client"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
quinn = "0.11.6"
rustls = { version = "0.23.35", default-features = false }
rustls-native-certs = "0.8.4"
tokio = { version = "1.48.0", features = ["net", "time", "rt", "sync"] }
thiserror = "2.0.17"
zeroize = "1.8"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
rcgen = "0.13"
anyhow = "1.0.100"
bincode = "1.3.3"
solana-client = "4.1.2"   # umbrella; provides nonblocking::rpc_client::RpcClient
solana-commitment-config = "3.1.1"
solana-keypair = "3.1.2"
solana-message = "4.3.0"
solana-pubkey = "4.2.0"
solana-signer = "3.0.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }   # `bincode` feature gates `instruction::transfer`;
solana-transaction = "4.1.5"

[lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
codegen-units = 1
lto = true
